# Synapse

./: .env.example  .gitignore  CHANGELOG.md  README.md  ci.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: auto-release.yml  ci.yml
app/: __main__.py
app/helpers/: cli.py
docs/: telegram-bot-setup.md  telegram-group-chat-id.md
src/: bot.py  main.py
src/ai/: base.py  factory.py  prompt.py
src/ai/claude/: client.py
src/config/: settings.py
src/db/: connection.py  queries.py
src/exceptions/: errors.py
src/loggers/: base.py  email_logger.py
src/main/: teams.py  telegram.py
src/storage/: store.py
src/telegram/: __init__.py  decorators.py  handlers.py  media.py
tests/: conftest.py
tests/main/: test_main_telegram.py
