
[project]

name = "synapse"
version = "0.6.0"
description = "Free, open-source Telegram group AI bot built on the Anthropic Claude API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Haashiraaa" }]

dependencies = [
    "anthropic",
    "python-telegram-bot",
    "psycopg2-binary",
    "python-dotenv",
    "python-docx",
    "botbuilder-core",
    "aiohttp",
    "haashi_pkg==1.6.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "pyright",
    "autopep8",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
synapse-telegram = "src.main.telegram:main"
synapse-teams = "src.main.teams:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pyright]
include = ["src", "app"]
pythonVersion = "3.10"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
